training/customsc-pv-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysc-pod
  labels:
    name: mysc-pod
spec:
  containers:
  - name: mysc-pod
    image: nginx
    volumeMounts:
      - mountPath: /usr/share/nginx/html
        name: data
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: mysc-pvc
