training/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: myds
  name: myds
spec:
  selector:
    matchLabels:
      app: myds
  template:
    metadata:
      labels:
        app: myds
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
