training/generated-env-in-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mydb
  name: mydb
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mydb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mydb
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: YourPasswordHere
        image: mysql
        imagePullPolicy: Always
        name: mysql
        resources: {}
