training/multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
spec:
  volumes:
  - name: shared
    emptyDir:
      sizeLimit: 1Mi
  containers:
  - name: primary
    image: busybox
    command:
    - "/bin/sh"
    args:
    - '-c'
    - 'while true; do echo "$(date)<br>" >> /var/log/index.html; sleep 5; done'
    volumeMounts:
    - name: shared
      mountPath: /var/log
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        memory: "64Mi"
        cpu: "250m"
  - name: adapter
    image: nginx
    volumeMounts:
    - name: shared
      mountPath: /usr/share/nginx/html
    ports:
    - containerPort: 80
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        memory: "64Mi"
        cpu: "250m"
