training/pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypvc-pod
spec:
  volumes:
    - name: content
      persistentVolumeClaim:
        claimName: mypvc
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
    volumeMounts:
      - mountPath: /usr/share/nginx/html
        name: content
