training/gateway-rewrite.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rewrite-gateway
spec:
  gatewayClassName: foo-lb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-host-rewrite
spec:
  hostnames:
  - rewrite.example
  rules:
  - filters:
    - type: URLRewrite
      urlRewrite:
        hostname: elsewhere.example
    backendRefs:
    - name: example-svc
      weight: 1
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-path-rewrite
spec:
  hostnames:
  - rewrite.example
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /cardamom
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: elsewhere.example
        path:
          # type: ReplaceFullPath
          # replaceFullPath: /fennel
          type: ReplacePrefixMatch
          replacePrefixMatch: /fennel
    backendRefs:
    - name: example-svc
      weight: 1
      port: 80
